--- a/MyOnlineShop/MyOnlineShop.csproj
+++ b/MyOnlineShop/MyOnlineShop.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
